[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Levels/Level0.gd" type="Script" id=1]
[ext_resource path="res://src/Nodes/TilesGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/art/tileset.png" type="Texture" id=4]
[ext_resource path="res://assets/art/tableTopMp.png" type="Texture" id=5]

[node name="LevelMp" type="Node2D"]
script = ExtResource( 1 )

[node name="BgMp" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="TilesGrid" parent="." instance=ExtResource( 2 )]
margin_left = 48.0
margin_top = 48.0
margin_right = 48.0
margin_bottom = 48.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="Deck" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 352.0
margin_top = 176.0
margin_right = 352.0
margin_bottom = 176.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopCard" type="Sprite" parent="Deck"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false
vframes = 4
hframes = 4
frame = 4

[node name="Button" type="Button" parent="."]
margin_left = 192.0
margin_top = 320.0
margin_right = 269.0
margin_bottom = 340.0
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
